fix: news styles on mobile

--- a/blocks/news/news.css
+++ b/blocks/news/news.css
@@ -1,6 +1,12 @@
+main .news {
+  text-decoration: none;
+  outline: none;
+}
+
 main .news a:hover {
   text-decoration: none;
 }
+
 main .news-feed-card-grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -15,17 +21,30 @@ main .news-feed-card-grid > :nth-child(n) {
 }
 
 main .news-teaser-card {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  width: 100%;
-  max-width: inherit;
+  z-index: 1;
+  height: 100%;
+  background-color: var(--card-background-color);
   background-clip: content-box;
   outline: none;
 }
 
+main .news-teaser-card:hover {
+  transition: opacity 0.2s ease-in-out 0s;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 16px;
+}
+
+@media (max-width: 763px) {
+  main .news-teaser-card {
+    flex-direction: row;
+  }
+}
+
 main .news-teaser-card-picture {
   position: relative;
-  height: fit-content;
+  height: 100%;
   width: 100%;
   overflow: hidden;
 }
@@ -35,6 +54,9 @@ main .news-teaser-card-picture img {
   transform-origin: center center;
   backface-visibility: hidden;
   transform: scale(1.005);
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 763px) {
@@ -49,21 +71,10 @@ main .news-teaser-card-picture img {
   }
 }
 
-main .large .news-teaser-card-info {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  overflow: hidden;
-  padding: 0px;
-  flex: 1 1 auto;
-  height: 97px;
-  padding: 12px;
-}
-
 main .news-teaser-card-info {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 95%;
   overflow: hidden;
   padding: 0px;
   flex: 1 1 auto;
@@ -81,20 +92,6 @@ main h3.news-teaser-card-title {
   overflow: hidden;
   margin: 0px;
   color: var(--text-title-color);
-}
-@media (min-width: 764px) {
-}
-
-main .large h3.news-teaser-card-title {
-  line-height: 1.1;
-  font-weight: 600;
-  font-size: 16px;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  margin: 0px;
-  color: rgb(255, 255, 255);
 }
 
 main .news-teaser-card-subtitle {
@@ -118,27 +115,6 @@ main .news-teaser-card-subtitle span {
   text-transform: uppercase;
 }
 
-main .large .news-teaser-card-subtitle {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  -webkit-box-pack: start;
-  justify-content: flex-start;
-  margin-bottom: 8px;
-}
-
-main .large .news-teaser-card-subtitle span {
-  line-height: 1.1;
-  font-weight: 600;
-  font-size: 14px;
-  margin: 0px;
-  color: rgb(255, 255, 255);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  text-transform: uppercase;
-}
-
 @media (min-width: 764px) {
   main .news-feed-card-grid {
     gap: 24px;
@@ -147,6 +123,25 @@ main .large .news-teaser-card-subtitle span {
   main .news-feed-card-grid > :nth-child(n) {
     grid-column: span 6 / auto;
     padding: 0px;
+  }
+
+  main .news-teaser-card {
+    display: block;
+    width: 100%;
+    max-width: inherit;
+  }
+
+  main .news-teaser-card.large:hover {
+    box-shadow: unset;
+  }
+
+  main .news-teaser-card.large {
+    background-color: unset;
+  }
+
+  main .news-teaser-card-picture {
+    position: relative;
+    height: fit-content;
   }
 
   main .news-teaser-card-info {
@@ -158,12 +153,14 @@ main .large .news-teaser-card-subtitle span {
   }
 
   main .large .news-teaser-card-info {
-    height: auto;
+    width: 100%;
+    overflow: hidden;
+    flex: 1 1 auto;
+    height: 97px;
     min-height: 107px;
     position: absolute;
     bottom: 0px;
     left: 0px;
-    width: 100%;
     z-index: 4;
     -webkit-box-pack: end;
     justify-content: flex-end;
@@ -179,10 +176,36 @@ main .large .news-teaser-card-subtitle span {
 
   main .large h3.news-teaser-card-title {
     line-height: 1.1;
-    margin-bottom: 0px;
-    font-weight: 600;
     font-size: 24px;
+    font-weight: 600;
     width: 90%;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin: 0px;
+    color: rgb(255, 255, 255);
+  }
+
+  main .large .news-teaser-card-subtitle {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    margin-bottom: 8px;
+  }
+
+  main .large .news-teaser-card-subtitle span {
+    line-height: 1.1;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 0px;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
   }
 }
 
